Remote agent should finish when remote process is gone